--- a/sleep.html
+++ b/sleep.html
@@ -15,6 +15,15 @@
 	</head>
 
 	<body>
+		<div class="sky">
+		        <div class="star"></div>
+		        <div class="star"></div>
+		        <div class="star"></div>
+		        <div class="star"></div>
+		        <div class="star"></div>
+		        <div class="star"></div>
+		        <div class="star"></div>
+		    </div>
 		<div class="container">
                 <div class="box">
 									<div class="seller"> THE NEW YORK TIMES BESTSELLER</div>
@@ -22,8 +31,18 @@
 									<div class= "Btitle">Why We Sleep</div>
 									<div class= "subText">UNLOCKING THE POWER OF SLEEP AND DREAMS</div>
 									<div class="author"> Matthew Walker,PhD</div>
-									<div class="review">"A book on a mission... recommneded for night-table reading in the most pragmatic sense."-<p style="color:yellow"> The New York Times Book Rewiew</p>
-									</div>
+									<div class="review">"A book on a mission... recommneded for night-table reading in the most pragmatic sense."-<p style="color:yellow"> The New York Times Book Rewiew</p></div>
+								</div>
+		</div>
+		<div class="sky2">
+						<div class="star"></div>
+						<div class="star"></div>
+						<div class="star"></div>
+						<div class="star"></div>
+						<div class="star"></div>
+						<div class="star"></div>
+						<div class="star"></div>
+				</div>
 	</body>
 
 </html>
